--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,24 +3,43 @@
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
+#header {
+  background-color: #303030;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  margin: 0;
+}
+
+html {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-color: #e6e6e6;
+  width: 95vw;
 }
 
 h1 {
-  color: #0d0d0d;
+  color: #e6e6e6;
   text-align: center;
 }
 
 h2 {
-  color: #0d0d0d;
+  color: #e6e6e6;
   text-align: center;
   font-size: medium;
 }
 
 #map {
+  position: absolute;
   height: 80vh;
-  margin: 20px;
+  width: 95vw;
+  top: 15vh;
+  left: 2.5vw;
+  right: 2.5vw;
 }
 
 #header_line {
@@ -30,29 +49,21 @@ h2 {
 }
 
 #gallery_popup {
-  background-color: #d9d9d9;
   height: 80vh;
-  width: 100vw;
+  width: 95vw;
   visibility: hidden;
-  position: fixed;
-  top: 17vh;
-  left: 0;
-  right: 0;
-}
-
-#close_button {
-  float: right;
-  margin: 30px;
 }
 
 #gallery_image {
   position: fixed;
-  height: 60vh;
+  max-height: 80vh;
   width: 60vw;
   left: 50%;
   margin-left: -30vw; /* Negative half of width. */
-  top: 20vh;
+  top: 10vh;
   object-fit: contain;
+  border-radius: 10px;
+  z-index: 3000;
 }
 
 #gallery_image_title {
@@ -77,18 +88,81 @@ h2 {
   font-size: medium;
 }
 
-#gallery_footer {
-  background-color: #303030;
-  position: fixed;
-  bottom: 0vh;
-  left: 0;
-  right: 0;
-  height: 10vh;
+#photo_popup {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  z-index: 1000;
+  max-width: 300px;
+  max-height: 300px;
 }
 
-#arrow_container {
+#mapPopup {
+  background-color: #0d0d0d;
+}
+
+.markerPopup .leaflet-popup-content-wrapper {
+  background-color: #404040;
+  background: #404040;
+  z-index: 1000;
+}
+
+.markerPopup .leaflet-popup-content {
+  margin: 10px;
+}
+
+.markerPopup .leaflet-popup-tip {
+  background-color: #404040;
+  background: #404040;
+}
+
+.markerPopup .leaflet-popup-close-button {
+  display: none;
+}
+
+#gallery_back_button {
+  position: absolute;
+  top: 30px;
+  right: 2.5vw;
+  width: 25px;
+  height: 25px;
+  filter: invert(90%);
+  visibility: hidden;
+  cursor: pointer;
+  z-index: 3000;
+}
+
+#gallery_left_arrow {
+  position: absolute;
+  top: 50vh;
+  left: 10vw;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  filter: invert(90%);
+  z-index: 3000;
+}
+
+#gallery_right_arrow {
+  position: absolute;
+  top: 50vh;
+  right: 10vw;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  filter: invert(90%);
+  z-index: 3000;
+}
+
+#opaque_background {
   position: fixed;
-  left: 30vw;
-  width: 40vw;
-  bottom: 4vh;
+  visibility: hidden;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 2000;
+  background-color: black;
+  filter: alpha(opacity=30);
+  opacity: 0.75;
 }
