--- a/stylesheet.css
+++ b/stylesheet.css
@@ -64,6 +64,7 @@ h2 {
   object-fit: contain;
   border-radius: 10px;
   z-index: 3000;
+  filter: drop-shadow(0px 20px 20px #202020);
 }
 
 #gallery_image_title {
@@ -122,8 +123,8 @@ h2 {
 
 #gallery_back_button {
   position: absolute;
-  top: 30px;
-  right: 2.5vw;
+  top: 5vh;
+  right: 5vh;
   width: 25px;
   height: 25px;
   filter: invert(90%);
