--- a/stylesheet.css
+++ b/stylesheet.css
@@ -174,9 +174,13 @@ h2 {
 #popupImage {
   max-width: 200px;
   max-height: 200px;
-  margin: 5px;
+  margin: 3px;
   cursor: pointer;
   border-radius: 12px;
+}
+
+.photoIcon {
+  border-radius: 4px;
 }
 
 @media screen and (max-device-width: 480px) {
