--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,6 +26,8 @@ h1 {
   color: #e6e6e6;
   text-align: center;
   font-weight: 500;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 h2 {
@@ -33,6 +35,8 @@ h2 {
   text-align: center;
   font-size: medium;
   font-weight: 500;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 #map {
@@ -181,6 +185,30 @@ h2 {
 
 .photoIcon {
   border-radius: 4px;
+}
+
+#loadingScreen {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #303030;
+  z-index: 5000;
+}
+
+#loadingText {
+  position: absolute;
+  top: 35vh;
+  text-align: center;
+  width: 100%;
+}
+
+#loadingIcon {
+  margin: 25px;
+  width: 50px;
+  height: 50px;
+  filter: invert(90%);
 }
 
 @media screen and (max-device-width: 480px) {
